--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=appbk
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=appbk
+DB_PASSWORD="JuaraBandung6*#"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
